versioned_docs/version-1.37/admin/private-repositories/ssh-key.mdx
---
title: Authenticating with an SSH Key
description: Use an SSH key so your users can access private repositories in their development environments
sidebar_label: SSH Key
id: ssh-key
---

import Image from "@theme/Image";
import TiersList from "@theme/TiersList";

# Authenticating with an SSH Key <TiersList tiers="Scale Enterprise Self-Hosted" />

Okteto generates an SSH key the first time it boots. This key is the identity used by Okteto when cloning repositories while executing a [git deployment pipeline](development/deploy/deploy-from-git.mdx). You can use this SSH key to give Okteto permission to clone private repositories.

## Get your Public Key

The public SSH is available by navigating to **Admin -> General** underneath the Integrations section. Click on the `Show SSH Key` button to reveal the value. This will only be displayed for users with the `Admin` role.

<p align="center">
  <Image
    src={
      require("@site/static/img/private-repository-ssh-key-sidebar+1.32.png").default
    }
    alt="show SSH key"
    width="800"
  />
</p>

## Add the Public Key to your Source Code Provider

Once you have the public key, follow your source code provider's instructions on how to add the SSH key to your account. We recommend that you create a dedicated `bot` account for Okteto.

- https://docs.github.com/en/github/authenticating-to-github/adding-a-new-ssh-key-to-your-github-account
- https://docs.gitlab.com/ee/ssh/
- https://support.atlassian.com/bitbucket-cloud/docs/set-up-an-ssh-key/

## Deploy a Private Repository

To deploy a private repository, use the `SSH` url of your git repository. This applies both when using the [`Deploy`](development/deploy/deploy-from-git.mdx) dialog in the Okteto UI and the [`okteto pipeline deploy`](reference/okteto-cli.mdx#deploy) command from your terminal.

<p align="center">
  <Image
    src={require("@site/static/img/private-repository.png").default}
    alt="add a private repository"
    width="676"
  />
</p>

:::info
Using SSH with any Git provider (GitHub, GitLab, Bitbucket, Azure DevOps, or self-hosted)? Your Okteto admin can centrally manage trusted hosts via [SSH Known Hosts](admin/ssh-known-hosts.mdx). This helps avoid host key verification failures during remote deploys and submodule operations.
:::
